--- a/bittr/Base.lproj/Main.storyboard
+++ b/bittr/Base.lproj/Main.storyboard
@@ -2360,8 +2360,8 @@
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Bb-vk-7Mv" userLabel="Description View">
                                                                 <rect key="frame" x="10" y="139.99999999999994" width="323" height="52"/>
                                                                 <subviews>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4w8-dl-bdI">
-                                                                        <rect key="frame" x="15" y="14" width="71.333333333333329" height="14"/>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4w8-dl-bdI">
+                                                                        <rect key="frame" x="15" y="14" width="74" height="14"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="5" id="S3F-Le-G8Q"/>
                                                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="5" id="UOo-aj-gSx"/>
@@ -2370,8 +2370,8 @@
                                                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="This is a very long and detailed description with lots of words." textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RKo-HK-B1b" userLabel="Description Text">
-                                                                        <rect key="frame" x="110.66666666666663" y="14" width="197.33333333333337" height="28"/>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a very long and detailed description with lots of words." textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RKo-HK-B1b" userLabel="Description Text">
+                                                                        <rect key="frame" x="106.66666666666664" y="14" width="201.33333333333337" height="28"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="5" id="rkb-Rw-xLZ"/>
                                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="5" id="sgL-fJ-dqR"/>
@@ -4663,7 +4663,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="849"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q7t-Nj-j7Y" userLabel="Center View">
-                                                <rect key="frame" x="0.0" y="158.66666666666663" width="393" height="531.99999999999989"/>
+                                                <rect key="frame" x="0.0" y="158.66666666666663" width="393" height="532"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z8A-jo-cpu" userLabel="Header View">
                                                         <rect key="frame" x="129" y="0.0" width="135" height="26"/>
@@ -4721,15 +4721,9 @@
                                                                     <constraint firstAttribute="height" constant="42" id="zAg-m6-hf7"/>
                                                                 </constraints>
                                                             </view>
-                                                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Cc1-pg-xDO">
-                                                                <rect key="frame" x="139.99999999999994" y="140.00000000000003" width="20" height="20"/>
-                                                                <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            </activityIndicatorView>
                                                         </subviews>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
-                                                            <constraint firstItem="Cc1-pg-xDO" firstAttribute="centerY" secondItem="Dut-46-HAv" secondAttribute="centerY" id="0Fw-as-mcO"/>
-                                                            <constraint firstItem="Cc1-pg-xDO" firstAttribute="centerX" secondItem="Dut-46-HAv" secondAttribute="centerX" id="0kx-Pn-U0v"/>
                                                             <constraint firstItem="Gax-dY-p7V" firstAttribute="leading" secondItem="Dut-46-HAv" secondAttribute="leading" constant="15" id="59f-NC-3Fl"/>
                                                             <constraint firstAttribute="height" constant="300" id="95W-0Y-uCN"/>
                                                             <constraint firstAttribute="trailing" secondItem="Gax-dY-p7V" secondAttribute="trailing" constant="15" id="G16-mq-rPj"/>
@@ -4803,7 +4797,6 @@
                                                                 <buttonConfiguration key="configuration" style="plain"/>
                                                                 <connections>
                                                                     <action selector="lnDoneButtonTapped:" destination="cOm-3q-072" eventType="touchUpInside" id="QWf-Qc-IAX"/>
-                                                                    <action selector="nextButtonTapped:" destination="BRF-rg-KPx" eventType="touchUpInside" id="aMc-Bo-3GQ"/>
                                                                 </connections>
                                                             </button>
                                                         </subviews>
@@ -4902,56 +4895,56 @@
                     </view>
                     <navigationItem key="navigationItem" id="a2J-fv-xCo"/>
                     <connections>
-                        <outlet property="addressCopy" destination="Hgb-ls-vWj" id="ePh-mc-uHT"/>
-                        <outlet property="addressLabel" destination="lXW-D4-G96" id="R7O-cK-mgl"/>
-                        <outlet property="addressSpinner" destination="W5g-nO-p77" id="zpB-P0-iCE"/>
+                        <outlet property="addressCopy" destination="Hgb-ls-vWj" id="f1k-xz-wU9"/>
+                        <outlet property="addressLabel" destination="lXW-D4-G96" id="Djl-dN-zxm"/>
+                        <outlet property="addressSpinner" destination="W5g-nO-p77" id="82s-Ea-zTA"/>
                         <outlet property="addressView" destination="Mg0-Gz-ap2" id="mKN-xK-Cui"/>
-                        <outlet property="amountButton" destination="VOP-y3-mmO" id="26j-wF-TUc"/>
-                        <outlet property="amountTextField" destination="vjo-Dh-Ya4" id="RYY-Vy-8nm"/>
-                        <outlet property="amountView" destination="dY1-gg-tHR" id="VIV-74-eye"/>
-                        <outlet property="backgroundButton" destination="igO-is-AUg" id="NoF-Jg-DSM"/>
-                        <outlet property="centerViewBoth" destination="QiB-FF-HYV" id="wuE-gV-Vl8"/>
-                        <outlet property="centerViewBothCenterY" destination="xSh-Lp-c8i" id="jDt-hP-GE4"/>
-                        <outlet property="centerViewBottom" destination="yV4-CI-mlI" id="Uk7-mn-7dG"/>
-                        <outlet property="centerViewInstant" destination="WpC-8Z-d3n" id="Qsc-1s-cgx"/>
-                        <outlet property="centerViewRegular" destination="KxO-rB-JTm" id="RT9-Hk-fvo"/>
-                        <outlet property="centerViewRegularTrailing" destination="3qm-yJ-4BS" id="ngg-mb-XXd"/>
-                        <outlet property="contentBackgroundButton" destination="F3z-x5-1Vi" id="2Fd-Xb-hgs"/>
-                        <outlet property="contentView" destination="f1N-uf-Vva" id="Hzn-4j-uc2"/>
-                        <outlet property="contentViewBottom" destination="zeW-Tr-tBP" id="AMI-rI-f07"/>
-                        <outlet property="contentViewHeight" destination="UGv-qv-YIf" id="fNX-9c-OPK"/>
-                        <outlet property="copyAddressButton" destination="8bo-4y-pL4" id="468-5W-Kxc"/>
-                        <outlet property="copyInvoiceButton" destination="BZs-9I-FZ3" id="dKg-T1-W1u"/>
-                        <outlet property="createView" destination="1PD-wF-vG9" id="cmD-Kq-F5l"/>
-                        <outlet property="descriptionButton" destination="m7G-bw-JGp" id="Jvw-OX-lvM"/>
-                        <outlet property="descriptionTextField" destination="JnL-Ys-QQJ" id="4Hi-Oa-WaL"/>
-                        <outlet property="descriptionView" destination="iYD-Or-QJL" id="fFY-VW-y8P"/>
+                        <outlet property="amountButton" destination="VOP-y3-mmO" id="FZs-Lb-FBn"/>
+                        <outlet property="amountTextField" destination="vjo-Dh-Ya4" id="kxl-Mb-DAS"/>
+                        <outlet property="amountView" destination="dY1-gg-tHR" id="Se9-ea-Uqc"/>
+                        <outlet property="backgroundButton" destination="igO-is-AUg" id="Zdr-AB-Zpl"/>
+                        <outlet property="centerViewBoth" destination="QiB-FF-HYV" id="MkR-XX-ugj"/>
+                        <outlet property="centerViewBothCenterY" destination="xSh-Lp-c8i" id="gfg-3J-hqf"/>
+                        <outlet property="centerViewBottom" destination="yV4-CI-mlI" id="fxb-mc-yHD"/>
+                        <outlet property="centerViewInstant" destination="WpC-8Z-d3n" id="eel-IB-d0s"/>
+                        <outlet property="centerViewRegular" destination="KxO-rB-JTm" id="KNX-pO-mqo"/>
+                        <outlet property="centerViewRegularTrailing" destination="3qm-yJ-4BS" id="x9L-zH-yof"/>
+                        <outlet property="contentBackgroundButton" destination="F3z-x5-1Vi" id="zXI-Rj-xqy"/>
+                        <outlet property="contentView" destination="f1N-uf-Vva" id="REQ-Ny-cxF"/>
+                        <outlet property="contentViewBottom" destination="zeW-Tr-tBP" id="9fd-gY-w1S"/>
+                        <outlet property="contentViewHeight" destination="UGv-qv-YIf" id="I65-n8-ehl"/>
+                        <outlet property="copyAddressButton" destination="8bo-4y-pL4" id="7zt-cL-ECH"/>
+                        <outlet property="copyInvoiceButton" destination="BZs-9I-FZ3" id="H1i-Hn-h2m"/>
+                        <outlet property="createView" destination="1PD-wF-vG9" id="o06-Ow-Izi"/>
+                        <outlet property="descriptionButton" destination="m7G-bw-JGp" id="PT8-ej-G2c"/>
+                        <outlet property="descriptionTextField" destination="JnL-Ys-QQJ" id="jYa-2k-vyc"/>
+                        <outlet property="descriptionView" destination="iYD-Or-QJL" id="k1q-Hf-Qy0"/>
                         <outlet property="downButton" destination="frs-eQ-jDJ" id="Mol-Rp-f98"/>
                         <outlet property="headerView" destination="bCt-bM-Gtd" id="CRd-kD-IV3"/>
-                        <outlet property="instantButton" destination="mea-yp-nly" id="8PW-vV-T4D"/>
-                        <outlet property="instantView" destination="xkL-lM-bhx" id="f0q-41-Wog"/>
-                        <outlet property="invoiceButton" destination="g7k-hp-MGA" id="LNa-9a-d7k"/>
-                        <outlet property="lnConfirmationAddressView" destination="K6l-qr-r4Q" id="2dR-K6-0b3"/>
-                        <outlet property="lnConfirmationDoneButton" destination="nBX-0L-dIA" id="4gm-ez-MZJ"/>
-                        <outlet property="lnConfirmationDoneView" destination="GqE-lc-47K" id="D0Y-ra-dR7"/>
-                        <outlet property="lnConfirmationHeaderView" destination="Z8A-jo-cpu" id="5M4-Tx-bjv"/>
-                        <outlet property="lnConfirmationQRView" destination="Dut-46-HAv" id="qkp-F3-PB0"/>
-                        <outlet property="lnInvoiceLabel" destination="EkP-hV-z9r" id="tOA-lg-44Q"/>
-                        <outlet property="lnQRCodeLogoView" destination="qWz-GU-3p4" id="ywy-GW-AhN"/>
-                        <outlet property="lnQRImage" destination="Gax-dY-p7V" id="0Jc-5L-iA0"/>
-                        <outlet property="qrCodeImage" destination="DwJ-hd-AUN" id="trF-Y4-thK"/>
-                        <outlet property="qrCodeLogoView" destination="NxA-OI-cZj" id="68z-Na-Djp"/>
+                        <outlet property="instantButton" destination="mea-yp-nly" id="LEf-hM-r39"/>
+                        <outlet property="instantView" destination="xkL-lM-bhx" id="2fG-Ie-Geg"/>
+                        <outlet property="invoiceButton" destination="g7k-hp-MGA" id="BgF-ix-9j8"/>
+                        <outlet property="lnConfirmationAddressView" destination="K6l-qr-r4Q" id="jWo-Ds-N80"/>
+                        <outlet property="lnConfirmationDoneButton" destination="nBX-0L-dIA" id="nkP-gg-OFt"/>
+                        <outlet property="lnConfirmationDoneView" destination="GqE-lc-47K" id="f6T-Zc-kfM"/>
+                        <outlet property="lnConfirmationHeaderView" destination="Z8A-jo-cpu" id="G3M-ns-GHF"/>
+                        <outlet property="lnConfirmationQRView" destination="Dut-46-HAv" id="LbU-DZ-mAo"/>
+                        <outlet property="lnInvoiceLabel" destination="EkP-hV-z9r" id="Ztv-oS-jhh"/>
+                        <outlet property="lnQRCodeLogoView" destination="qWz-GU-3p4" id="iPk-01-ZCs"/>
+                        <outlet property="lnQRImage" destination="Gax-dY-p7V" id="ofg-xs-EaR"/>
+                        <outlet property="qrCodeImage" destination="DwJ-hd-AUN" id="0yQ-ik-wlT"/>
+                        <outlet property="qrCodeLogoView" destination="NxA-OI-cZj" id="gJD-AV-GBm"/>
+                        <outlet property="qrCodeSpinner" destination="jwa-hN-Ylt" id="xLG-n9-BzB"/>
                         <outlet property="qrView" destination="OhN-lz-eEE" id="eeH-la-vaw"/>
-                        <outlet property="qrcodeSpinner" destination="jwa-hN-Ylt" id="ysW-ch-lXM"/>
-                        <outlet property="receivableButton" destination="Yud-cY-9Hq" id="ySX-b5-MEF"/>
-                        <outlet property="receivableLNLabel" destination="vUg-My-Psd" id="Nbx-yw-Muo"/>
-                        <outlet property="refreshButton" destination="nd6-7Y-67q" id="NtB-J6-km0"/>
-                        <outlet property="refreshView" destination="Oqw-m0-n7E" id="91f-Kp-Mev"/>
-                        <outlet property="regularButton" destination="q9s-bJ-skr" id="YM1-Xo-glr"/>
-                        <outlet property="regularView" destination="2SH-N9-oem" id="02l-5t-qir"/>
-                        <outlet property="scrollView" destination="3k7-fP-1dm" id="PBc-7A-b54"/>
-                        <outlet property="scrollViewTrailing" destination="Hai-VD-Mf4" id="Y1s-cX-cCg"/>
-                        <outlet property="switchView" destination="9ST-hi-ZXW" id="I8F-qE-HSb"/>
+                        <outlet property="receivableButton" destination="Yud-cY-9Hq" id="La0-Xc-6vC"/>
+                        <outlet property="receivableLNLabel" destination="vUg-My-Psd" id="Fom-YX-lj4"/>
+                        <outlet property="refreshButton" destination="nd6-7Y-67q" id="kkP-DW-zU7"/>
+                        <outlet property="refreshView" destination="Oqw-m0-n7E" id="7Tg-NF-N3Z"/>
+                        <outlet property="regularButton" destination="q9s-bJ-skr" id="rFh-zm-qIP"/>
+                        <outlet property="regularView" destination="2SH-N9-oem" id="tap-Ol-Gt7"/>
+                        <outlet property="scrollView" destination="3k7-fP-1dm" id="axf-ZR-e1a"/>
+                        <outlet property="scrollViewTrailing" destination="Hai-VD-Mf4" id="kcN-M1-j1i"/>
+                        <outlet property="switchView" destination="9ST-hi-ZXW" id="E9S-G9-hJv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a6L-Vr-AOi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
