--- a/bittr/Base.lproj/Main.storyboard
+++ b/bittr/Base.lproj/Main.storyboard
@@ -254,7 +254,7 @@
                                 </constraints>
                             </view>
                             <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YFi-PA-AqV" userLabel="Syncing Status View">
-                                <rect key="frame" x="60.666666666666657" y="364" width="272" height="149"/>
+                                <rect key="frame" x="65.666666666666686" y="364" width="261.99999999999994" height="149"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aRw-c8-cW6" userLabel="Conversion View">
                                         <rect key="frame" x="20" y="21" width="173" height="14"/>
@@ -297,7 +297,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vWd-DR-ogj" userLabel="LDK View">
-                                        <rect key="frame" x="20.000000000000014" y="45" width="158.66666666666669" height="14"/>
+                                        <rect key="frame" x="20" y="45" width="158.66666666666663" height="14"/>
                                         <subviews>
                                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="19W-kF-Ob2" userLabel="Spinner LDK">
                                                 <rect key="frame" x="0.0" y="-3" width="20" height="20"/>
@@ -337,7 +337,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="owH-Cf-uqt" userLabel="BDK View">
-                                        <rect key="frame" x="30" y="69" width="222" height="14"/>
+                                        <rect key="frame" x="20" y="69" width="222" height="14"/>
                                         <subviews>
                                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Us5-dV-AoM" userLabel="Spinner BDK">
                                                 <rect key="frame" x="0.0" y="-3" width="20" height="20"/>
@@ -377,7 +377,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PVx-gE-6jL" userLabel="Syncing View">
-                                        <rect key="frame" x="20.000000000000007" y="93" width="102.33333333333334" height="14"/>
+                                        <rect key="frame" x="19.999999999999993" y="93" width="102.33333333333331" height="14"/>
                                         <subviews>
                                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="F92-n4-Rlb" userLabel="Spinner Syncing">
                                                 <rect key="frame" x="0.0" y="-3" width="20" height="20"/>
@@ -417,7 +417,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yzm-sS-sRH" userLabel="Final View">
-                                        <rect key="frame" x="20.000000000000014" y="117" width="140.66666666666669" height="14"/>
+                                        <rect key="frame" x="20" y="117" width="140.66666666666663" height="14"/>
                                         <subviews>
                                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="lgz-o2-UPv" userLabel="Spinner Final">
                                                 <rect key="frame" x="0.0" y="-3" width="20" height="20"/>
@@ -470,7 +470,7 @@
                                     <constraint firstItem="aRw-c8-cW6" firstAttribute="leading" secondItem="YFi-PA-AqV" secondAttribute="leading" constant="20" id="njv-11-usp"/>
                                     <constraint firstItem="PVx-gE-6jL" firstAttribute="leading" secondItem="YFi-PA-AqV" secondAttribute="leading" constant="20" id="op7-PJ-ww0"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="pme-Zm-MkU"/>
-                                    <constraint firstItem="owH-Cf-uqt" firstAttribute="leading" secondItem="YFi-PA-AqV" secondAttribute="leading" constant="30" id="s7f-rC-gBw"/>
+                                    <constraint firstItem="owH-Cf-uqt" firstAttribute="leading" secondItem="YFi-PA-AqV" secondAttribute="leading" constant="20" id="s7f-rC-gBw"/>
                                     <constraint firstAttribute="trailing" secondItem="owH-Cf-uqt" secondAttribute="trailing" constant="20" id="tIm-eq-L4M"/>
                                     <constraint firstItem="owH-Cf-uqt" firstAttribute="top" secondItem="vWd-DR-ogj" secondAttribute="bottom" constant="10" id="xHD-lJ-uV2"/>
                                 </constraints>
